--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,12 +14,15 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:text="@string/button_colors_fragment"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/editTextFirstName"
+            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
@@ -33,6 +36,7 @@
 
         <EditText
             android:id="@+id/editTextLastName"
+            style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="@string/hint_enter_last_name"
@@ -46,13 +50,17 @@
 
         <Button
             android:id="@+id/buttonSendUser"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:text="@string/button_send_user"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/editTextFirstName" />
+            app:layout_constraintTop_toBottomOf="@id/editTextFirstName"
+            app:strokeColor="@color/colorPrimary" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
