--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -14,12 +14,16 @@
             android:id="@+id/action_homeFragment_to_colorsFragment"
             app:destination="@id/colorsFragment"
             app:enterAnim="@anim/slide_in_right"
-            app:exitAnim="@anim/fragment_fade_exit"
+            app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right" />
         <action
             android:id="@+id/action_homeFragment_to_receiveTextFragment"
-            app:destination="@id/receiveUserFragment" />
+            app:destination="@id/receiveUserFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
     </fragment>
     <fragment
         android:id="@+id/colorsFragment"
