--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,30 +9,40 @@
         android:layout_height="match_parent">
 
         <Button
-            android:id="@+id/buttonColorsFragment"
+            android:id="@+id/buttonMirrorFragment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:text="@string/button_colors_fragment"
+            android:text="@string/button_mirror_text_fragment"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="16dp"
+            android:background="?attr/colorControlHighlight"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/buttonMirrorFragment" />
+
         <EditText
             android:id="@+id/editTextFirstName"
             style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="16dp"
             android:hint="@string/hint_enter_first_name"
             android:importantForAutofill="no"
             android:inputType="text"
             app:layout_constraintEnd_toStartOf="@+id/editTextLastName"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/buttonColorsFragment" />
+            app:layout_constraintTop_toBottomOf="@id/divider" />
 
         <EditText
             android:id="@+id/editTextLastName"
@@ -60,7 +70,17 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/editTextFirstName"
-            app:strokeColor="@color/colorPrimary" />
+            app:strokeColor="?attr/colorPrimary" />
+
+        <View
+            android:id="@+id/divider2"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="16dp"
+            android:background="?attr/colorControlHighlight"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/buttonSendUser" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
