--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,9 +10,10 @@
         tools:context=".ui.MainActivity">
 
 
-        <FrameLayout
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:fillViewport="true">
 
             <fragment
                 android:id="@+id/navHostFragment"
@@ -21,7 +22,7 @@
                 android:layout_height="match_parent"
                 app:defaultNavHost="true"
                 app:navGraph="@navigation/navigation" />
-        </FrameLayout>
+        </androidx.core.widget.NestedScrollView>
 
         <com.google.android.material.navigation.NavigationView
             android:id="@+id/navView"
