--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -82,5 +82,19 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/buttonSendUser" />
 
+        <Button
+            android:id="@+id/buttonRecyclerView"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:text="@string/button_recycler_example"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/divider2"
+            app:strokeColor="?attr/colorPrimary" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
