--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -11,8 +11,8 @@
         android:label="Home"
         tools:layout="@layout/fragment_home">
         <action
-            android:id="@+id/action_homeFragment_to_colorsFragment"
-            app:destination="@id/mirrorTextFragment"
+            android:id="@+id/action_homeFragment_to_mirrorTextFragment"
+            app:destination="@+id/mirrorTextFragment"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
@@ -20,6 +20,13 @@
         <action
             android:id="@+id/action_homeFragment_to_receiveTextFragment"
             app:destination="@id/receiveUserFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
+        <action
+            android:id="@+id/action_homeFragment_to_userListFragment"
+            app:destination="@id/userListFragment"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
@@ -44,4 +51,9 @@
         android:name="com.baileytye.examprep.ui.AboutFragment"
         android:label="AboutFragment"
         tools:layout="@layout/fragment_about" />
+    <fragment
+        android:id="@+id/userListFragment"
+        android:name="com.baileytye.examprep.ui.userList.UserListFragment"
+        android:label="Binding Recycler View"
+        tools:layout="@layout/fragment_user_list" />
 </navigation>
