--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,7 +2,14 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ui.HomeFragment">
+    tools:context=".ui.home.HomeFragment">
+
+    <data>
+
+        <variable
+            name="viewModel"
+            type="com.baileytye.examprep.ui.home.HomeViewModel" />
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -10,15 +17,18 @@
 
         <Button
             android:id="@+id/buttonMirrorFragment"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:text="@string/button_mirror_text_fragment"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textSize="16sp"
+            android:onClick="@{() -> viewModel.startMirrorText()}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:strokeColor="?attr/colorPrimary" />
 
         <View
             android:id="@+id/divider"
@@ -65,6 +75,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:text="@string/button_send_user"
+            android:onClick="@{() -> viewModel.startReceiveUser()}"
             android:textAppearance="@style/TextAppearance.AppCompat.Display3"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -89,12 +100,23 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:text="@string/button_recycler_example"
+            android:onClick="@{() -> viewModel.startUserList()}"
             android:textAppearance="@style/TextAppearance.AppCompat.Display3"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/divider2"
             app:strokeColor="?attr/colorPrimary" />
+
+        <View
+            android:id="@+id/divider3"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="16dp"
+            android:background="?attr/colorControlHighlight"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/buttonRecyclerView" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
