--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,18 +17,12 @@
 
         <Button
             android:id="@+id/buttonMirrorFragment"
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:text="@string/button_mirror_text_fragment"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textSize="16sp"
+            style="@style/OutlinedButton"
             android:onClick="@{() -> viewModel.startMirrorText()}"
+            android:text="@string/button_mirror_text_fragment"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:strokeColor="?attr/colorPrimary" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <View
             android:id="@+id/divider"
@@ -70,18 +64,12 @@
 
         <Button
             android:id="@+id/buttonSendUser"
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:text="@string/button_send_user"
+            style="@style/OutlinedButton"
             android:onClick="@{() -> viewModel.startReceiveUser()}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
-            android:textSize="16sp"
+            android:text="@string/button_send_user"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/editTextFirstName"
-            app:strokeColor="?attr/colorPrimary" />
+            app:layout_constraintTop_toBottomOf="@id/editTextFirstName" />
 
         <View
             android:id="@+id/divider2"
@@ -95,18 +83,12 @@
 
         <Button
             android:id="@+id/buttonRecyclerView"
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:text="@string/button_recycler_example"
+            style="@style/OutlinedButton"
             android:onClick="@{() -> viewModel.startUserList()}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
-            android:textSize="16sp"
+            android:text="@string/button_recycler_example"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/divider2"
-            app:strokeColor="?attr/colorPrimary" />
+            app:layout_constraintTop_toBottomOf="@id/divider2" />
 
         <View
             android:id="@+id/divider3"
@@ -117,6 +99,15 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/buttonRecyclerView" />
+
+        <Button
+            android:id="@+id/buttonRetrofit"
+            style="@style/OutlinedButton"
+            android:onClick="@{() -> viewModel.startRetrofit()}"
+            android:text="@string/button_retrofit_moshi_example"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/divider3" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
