--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -7,11 +7,12 @@
         android:layout_height="match_parent"
         tools:context=".ui.AboutFragment">
 
-        <TextView
+        <Button
+            android:id="@+id/button"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="16dp"
-            android:text="@string/hello_blank_fragment" />
+            android:text="@string/button_clear_shared_prefs" />
 
     </FrameLayout>
 </layout>
