--- a/app/src/main/res/layout/item_retrofit.xml
+++ b/app/src/main/res/layout/item_retrofit.xml
@@ -28,6 +28,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            android:scaleType="centerCrop"
             app:marsImage="@{property.imgSrcUrl}"
             tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
