--- a/app/src/main/res/layout/fragment_mirror_text.xml
+++ b/app/src/main/res/layout/fragment_mirror_text.xml
@@ -34,7 +34,7 @@
             android:id="@+id/textViewMirror"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:text="@={mirrorViewModel.mirrorText}"
+            android:text="@{mirrorViewModel.mirrorText}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
