--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -37,9 +37,10 @@
         <EditText
             android:id="@+id/editTextFirstName"
             style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp"
             android:hint="@string/hint_enter_first_name"
             android:importantForAutofill="no"
             android:inputType="text"
@@ -51,8 +52,9 @@
         <EditText
             android:id="@+id/editTextLastName"
             style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
             android:hint="@string/hint_enter_last_name"
             android:importantForAutofill="no"
             android:inputType="text"
@@ -71,6 +73,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/editTextFirstName" />
 
+        <TextView
+            android:id="@+id/labelUserInfo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:paddingHorizontal="16dp"
+            android:text="@string/label_notification_info"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/buttonSendUser" />
+
         <View
             android:id="@+id/divider2"
             android:layout_width="match_parent"
@@ -79,7 +92,7 @@
             android:background="?attr/colorControlHighlight"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/buttonSendUser" />
+            app:layout_constraintTop_toBottomOf="@id/labelUserInfo" />
 
         <Button
             android:id="@+id/buttonRecyclerView"
