--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -45,6 +45,13 @@
         <action
             android:id="@+id/action_homeFragment_to_validationFragment"
             app:destination="@id/validationFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_paintFragment"
+            app:destination="@id/paintFragment"
+            app:enterAnim="@anim/fragment_fade_enter"
+            app:exitAnim="@anim/fragment_fade_exit"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/mirrorTextFragment"
@@ -98,4 +105,8 @@
         android:name="com.baileytye.examprep.ui.validation.ValidationFragment"
         android:label="fragment_validation"
         tools:layout="@layout/fragment_validation" />
+    <fragment
+        android:id="@+id/paintFragment"
+        android:name="com.baileytye.examprep.ui.paint.PaintFragment"
+        android:label="PaintFragment" />
 </navigation>
